# collab4-api

./: .gitignore  go.mod  main_test.go
.github/workflows/: ci.yml
cmd/collab4-api/: run.go  run_test.go
cmd/interactive-gemini/: main.go
go-collab4/: go.mod  go.sum
go-collab4/cmd/collab4-go/: run.go  run_test.go
go-collab4/cmd/interactive-gemini/: main.go
go-collab4/pkg/gemini/: client.go
go-langchaingo/: go.mod  go.sum
go-langchaingo/cmd/main/: main.go
go-langchaingo/pkg/llm/: llm.go
go-langchaingo/service/: service.go
internal/contract/: message.go
internal/gemini/: client.go
py-langgraph/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
py-langgraph/llm/: provider.py
py-langgraph/service/: graph.py
